fix: fixed the gap between the address-field and percentage-selector

--- a/packages/cashier/src/pages/withdrawal/withdrawal-crypto-form/withdrawal-crypto-form.scss
+++ b/packages/cashier/src/pages/withdrawal/withdrawal-crypto-form/withdrawal-crypto-form.scss
@@ -44,4 +44,8 @@
             }
         }
     }
+
+    & .withdraw__input {
+        margin-bottom: 3.2rem !important;
+    }
 }
